<resources>

    <string name="app_name">PLOT</string>
    <string name="create">Create Account</string>
    <string name="enter_password">Password</string>
    <string name="title_activity_sign_in">Sign In</string>

    <string name="forgot_password_click_here">Forgot Password</string>
    <string name="create_id_number">Enter Full Names</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name</string>
    <string name="display_name">Display Name</string>
    <string name="_8">8</string>
    <string name="_23">23</string>
    <string name="dishes">Dishes</string>
    <string name="visited">Visited</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">lorem ipsum met</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favorites</string>
    <string name="menu_chats">Messages</string>
    <string name="profile">Profile</string>
    <string name="foods_eaten">Foods Eaten</string>
    <string name="places_visited">Places Visited</string>
    <string name="theme">Theme</string>
    <string name="high_end">High-end</string>
    <string name="pricey"> Pricey </string>
    <string name="moderate"> Moderate </string>
    <string name="fair"> Fair </string>
    <string name="free"> Free </string>
    <string name="prices">Prices</string>
    <string name="similar_places">Similar Places</string>
    <string name="location">Location</string>
    <string name="place_name">Place Name</string>
    <string name="reviews">Reviews</string>
    <string name="lorem_ipsum">At this point, Gilgamesh realizes that he is talking to Utnapishtim, the Far-Away; he hadn\'t expected an immortal human to be ordinary and aged. He asks Utnapishtim how he received immortality, and Utnapishtim tells him the great secret hidden from humans: In the time before the Flood, there was a city, Shuruppak, on the banks of the Euphrates. There, the counsel of the gods held a secret meeting; they all resolved to destroy the world in a great flood. All the gods were under oath not to reveal this secret to any living thing, but Ea (one of the gods that created humanity) came to Utnapishtim\'s house and told the secret to the walls of Utnapishtim\'s house, thus not technically violating his oath to the rest of the gods. He advised the walls of Utnapishtim\'s house to build a great boat, its length as great as its breadth, to cover the boat, and to bring all living things into the boat. Utnapishtim gets straight to work and finishes the great boat by the new year. Utnapishtim then loads the boat with gold, silver, and all the living things of the earth, and launches the boat. Ea orders him into the boat and commands him to close the door behind him. The black clouds arrive, with the thunder god Adad rumbling within them; the earth splits like an earthenware pot, and all the light turns to darkness. The Flood is so great that even the gods are frightened:
 </string>
</resources>