<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profileViews.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="20dp"
            android:background="@drawable/gradient_shape_sam">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userProfileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                app:shapeAppearanceOverlay="@style/CircleShapeOverlay"
                android:src="@drawable/allecon"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="60dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@+id/userProfileImage"
                android:layout_toRightOf="@+id/userProfileImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/displayNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/display_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/edit_info"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hexagon"
                    android:text="@string/edit_profile"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:focusable="true" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-100dp"
            android:padding="10dp">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"

                        android:src="@drawable/beenhere"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_8"
                        android:textColor="@color/white"
                        android:textSize="35sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visited"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/restaurant"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23"
                        android:textSize="35sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dishes"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <TextView
            android:id="@+id/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:padding="8dp"
            android:text="@string/display_name"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/person_icon"
            app:drawableLeftCompat="@drawable/person_icon" />

        <TextView
            android:id="@+id/etPerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:padding="8dp"
            android:textSize="20sp"
            app:hintTextColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/email_icon"
            app:drawableStartCompat="@drawable/email_icon" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            android:text ="@string/phone_number"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/lock_icon"
            app:drawableStartCompat="@drawable/lock_icon"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20sp"
            app:hintTextColor="@color/white"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/lock_icon"
            app:drawableLeftCompat="@drawable/lock_icon" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:padding="8dp"
                android:layout_gravity="center"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:cornerRadius="4dp" />

        </LinearLayout>

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp" />

</RelativeLayout>