<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_shape"
    tools:context=".profileViews.SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollY="300dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnhave_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:text="@string/have_an_account_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btncreate_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPerName_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_id_number"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/person_icon"
                    android:drawableStart="@drawable/person_icon"
                    android:drawablePadding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPerEmail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:autofillHints="Email"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPerName_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPerPassword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_password"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPerEmail_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/lock_icon"
                    android:drawableStart="@drawable/lock_icon"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPerRePassword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenter_password"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPerPassword_layout" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPerRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/lock_icon"
                    android:drawableStart="@drawable/lock_icon"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btncreate_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cornerRadius="4dp"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="110dp"
                android:layout_marginRight="110dp"
                android:padding="8dp"
                android:background="@drawable/button_shape"
                android:textColor="@android:color/white"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPerRePassword_layout" />

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                style="?android:attr/progressBarStyle"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/btncreate_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPerEmail_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</FrameLayout>